--- a/accessibility/fix-a11y/09-index.html
+++ b/accessibility/fix-a11y/09-index.html
@@ -104,7 +104,7 @@
         </div>
       </div>
     </div>
-    <div class="section">
+    <section class="section">
       <div class="container">
         <div class="row">
           <div class="menu-content">
@@ -130,8 +130,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="section">
+    </section>
+    <section class="section">
       <div class="container">
         <div class="row">
           <div class="col-8">
@@ -158,7 +158,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
